added loading animation for video

--- a/style/core/_animation.scss
+++ b/style/core/_animation.scss
@@ -2,9 +2,13 @@
     transform: translateX(0)
 }
 
-.show{
+.fade{
     opacity: 1;
     visibility: visible;
+}
+
+.show{
+    display: block;
 }
 
 .preload *{
