--- a/style/main.css
+++ b/style/main.css
@@ -176,6 +176,63 @@ button {
           transform: scale(1.2);
 }
 
+.spinner {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 51;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .spinner {
+    width: 140px;
+    height: 140px;
+  }
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #9E9FA2;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% {
+    -webkit-transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes sk-bounce {
+  0%, 100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -570,6 +627,7 @@ button {
   height: 100%;
   max-width: 80%;
   max-height: 80%;
+  z-index: 52;
 }
 
 .video-close {
@@ -599,9 +657,13 @@ button {
           transform: translateX(0);
 }
 
-.show {
+.fade {
   opacity: 1;
   visibility: visible;
+}
+
+.show {
+  display: block;
 }
 
 .preload * {
