--- a/style/main.css
+++ b/style/main.css
@@ -11,6 +11,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   padding: 0 5vw;
   max-width: 1400px;
@@ -59,6 +63,23 @@ body {
   width: 45px;
   height: 2px;
   background-color: #AB2B30;
+}
+
+.section-title {
+  color: #fefefe;
+  font-size: 1.5rem;
+}
+
+@media (min-width: 640px) {
+  .section-title {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .section-title {
+    font-size: 2.5rem;
+  }
 }
 
 button {
@@ -497,6 +518,79 @@ button {
 
 .menu .menu-item .active-mlink::before {
   display: block;
+}
+
+.intro {
+  background-color: #1B1E25;
+  padding: 5vw;
+  background-image: url(/images/bg-line.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (min-width: 1024px) {
+  .intro {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 7vw 0;
+  }
+}
+
+.intro-text {
+  max-width: 480px;
+  margin: 2rem auto 0 auto;
+}
+
+.intro-text p {
+  margin: 1.5rem 0 2rem 0;
+  color: #55585D;
+  font-weight: 500;
+  line-height: 1.7;
+  letter-spacing: 1px;
+}
+
+@media (min-width: 1024px) {
+  .intro-text {
+    width: 60%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
+
+@media (min-width: 1024px) {
+  .intro-img {
+    width: 40%;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.intro-link {
+  color: #fefefe;
+  border: 1px solid #fefefe;
+  padding: .8rem 3rem;
+  text-decoration: none;
+  font-size: .9rem;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.intro-link:hover {
+  background-color: #fefefe;
+  color: #0C1017;
+  border: 1px solid #0C1017;
 }
 
 .home-hero {
