added our services section

--- a/style/layout/_intro.scss
+++ b/style/layout/_intro.scss
@@ -1,6 +1,6 @@
 .intro{
     background-color: $blue;
-    padding: 5vw;
+    padding: 5vw 5vw 5rem 5vw;
     background-image: url(/images/bg-line.svg);
     background-position: center;
     background-repeat: no-repeat;
