--- a/style/core/_animation.scss
+++ b/style/core/_animation.scss
@@ -6,6 +6,10 @@
     opacity: 1;
     visibility: visible;
 }
+.fade-up{
+    @extend .fade;
+    transform: translate(-50%, 10px);
+}
 
 .show{
     display: block;
