--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -103,3 +103,119 @@
     top: 2rem;
     cursor: pointer;
 }
+
+
+// SERVICES
+.home-services{
+    background-color: $dark-blue;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(4,25%);
+    grid-template-rows: 80vh;
+    
+}
+
+@media (max-width: 1023px) {
+    .home-services{
+        grid-template-columns: repeat(2,50%);
+        grid-template-rows: repeat(2, 50vh);
+    }
+    .home-service{
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+}
+
+@media (max-width: 640px) {
+    .home-services{
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(4, 50vh);
+    }
+    .home-service{
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+}
+
+.home-service{
+    position: relative;
+    border-right: 1px solid rgba(255,255,255,0.1);
+    h3{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        color: $white;
+        font-size: 1rem;
+        @include breakpoint(1200px){
+            font-size: 1.2rem;
+        }
+        @include breakpoint(1400px){
+            font-size: 1.4rem;
+        }
+    }
+}
+.service-bg{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    @include bgImageStyle();
+    @include easeIn(0.2s);
+    @include breakpoint(1024px){
+        display: block;
+    }
+}
+
+.home-service__link{
+    display: none;
+    position: absolute;
+    bottom: 100px;
+    left: 50%;
+    color: $white;
+    text-decoration: none;
+    transform: translate(-50%, 100px);
+    border: 1px solid $white;
+    padding: 0.8rem 0;
+    width: 150px;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    @include easeIn(0.3s);
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    &:hover{
+        color: $dark-blue;
+        background-color: $white;
+    }
+    @include breakpoint(1024px){
+        display: block;
+    }
+}
+
+.bg-mobile{
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    top: 20px;
+    
+    height: calc(100% - 40px);
+    background-image: url(/images/our-service-1.jpg);
+    @include bgImageStyle();
+    @include breakpoint(1024px){
+        display: none;
+    }
+}
+
+.mobile-link{
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    @include breakpoint(1024px){
+        display: none;
+    }
+}
