--- a/style/main.css
+++ b/style/main.css
@@ -894,6 +894,111 @@ button {
   }
 }
 
+.selected-projects {
+  background-color: #F5F5F6;
+  padding: 5vw 0;
+}
+
+.selected-projects span {
+  color: #55585D;
+}
+
+.selected-projects article {
+  max-width: 420px;
+  margin: 2rem auto 0 auto;
+}
+
+@media (min-width: 1024px) {
+  .selected-projects article {
+    margin: 0;
+    width: 32%;
+    max-width: 100%;
+  }
+}
+
+.selected-projects .project-img {
+  width: 100%;
+  max-height: 250px;
+}
+
+@media (min-width: 1024px) {
+  .selected-projects .project-img {
+    max-height: 170px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .selected-projects .project-img {
+    max-height: 200px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .selected-projects .project-img {
+    max-height: 235px;
+  }
+}
+
+.selected-projects .project-text {
+  margin-top: -1rem;
+  background-color: #fefefe;
+  text-align: center;
+  padding: 2rem 2rem 2.4rem 2rem;
+}
+
+.selected-projects .project-text .tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: .7rem;
+  color: #55585D;
+  margin: 1rem 0 1.9rem 0;
+}
+
+.selected-projects .project-text .tags p {
+  background-color: #F5F5F6;
+  border: 1px solid #9E9FA2;
+  padding: 0.2rem;
+  border-radius: 2px;
+  margin: 0 .3rem;
+}
+
+.selected-projects .project-text .project-link {
+  color: #0C1017;
+  border: 1px solid #0C1017;
+  text-decoration: none;
+  font-size: 0.9rem;
+  font-weight: 700;
+  padding: .8rem 3rem;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.selected-projects .project-text .project-link:hover {
+  color: #fefefe;
+  background-color: #0C1017;
+}
+
+@media (min-width: 1024px) {
+  .wrapper-f {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .isOpen {
   -webkit-transform: translateX(0);
           transform: translateX(0);
