--- a/style/main.css
+++ b/style/main.css
@@ -197,6 +197,16 @@ button {
           transform: scale(1.2);
 }
 
+.contact-cta-btn {
+  margin-top: 1.5rem;
+  background-color: #AB2B30;
+  color: #fefefe;
+  padding: 1rem 2.5rem;
+  font-size: .9rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
 .spinner {
   width: 80px;
   height: 80px;
@@ -591,6 +601,38 @@ button {
   background-color: #fefefe;
   color: #0C1017;
   border: 1px solid #0C1017;
+}
+
+.contact-cta {
+  padding: 5rem 5vw;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(12, 16, 23, 0.702)), to(rgba(12, 16, 23, 0.702))), url(/images/contact-cta.jpg);
+  background-image: linear-gradient(rgba(12, 16, 23, 0.702), rgba(12, 16, 23, 0.702)), url(/images/contact-cta.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 1024px) {
+  .contact-cta {
+    padding: 7.5rem 5vw;
+  }
+  .contact-cta h2 {
+    font-size: 2.2rem;
+  }
 }
 
 .home-hero {
