--- a/style/main.scss
+++ b/style/main.scss
@@ -11,6 +11,7 @@
 @import "./layout/navigation";
 @import "./layout/intro";
 @import "./layout/contact-cta";
+@import "./layout/footer";
 
 
 @import "./pages/home";
