--- a/style/main.css
+++ b/style/main.css
@@ -82,6 +82,28 @@ img {
   }
 }
 
+.section-hero {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 50vh;
+}
+
+@media (min-width: 1024px) {
+  .section-hero {
+    padding: 12.5rem 5vw 12.5rem 5vw;
+  }
+}
+
 button {
   background: none;
   color: inherit;
@@ -1191,6 +1213,127 @@ button {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+}
+
+.services-bg {
+  background-color: #F5F5F6;
+  padding: 3rem 0 4rem 0;
+}
+
+@media (min-width: 1024px) {
+  .services-bg {
+    padding: 6rem 0 7rem 0;
+  }
+}
+
+.service-card {
+  margin-top: 3rem;
+  background-color: #fefefe;
+}
+
+@media (min-width: 1024px) {
+  .service-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.service-card .service-card__img {
+  padding-top: 65%;
+  width: 100%;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 1024px) {
+  .service-card .service-card__img {
+    padding-top: 40%;
+    width: 50%;
+  }
+}
+
+.service-card .service-card__text {
+  width: 100%;
+  padding: 2rem 2rem 3.4rem 2rem;
+}
+
+@media (min-width: 1024px) {
+  .service-card .service-card__text {
+    width: 50%;
+  }
+}
+
+.service-card .service-card__text h2 {
+  color: #0C1017;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+}
+
+@media (min-width: 640px) {
+  .service-card .service-card__text h2 {
+    font-size: 1.7rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .service-card .service-card__text h2 {
+    font-size: 2rem;
+  }
+}
+
+.service-card .service-card__text p {
+  line-height: 1.7;
+  color: #55585D;
+  margin: 1rem 0 2.3rem 0;
+  font-weight: 500;
+}
+
+.service-card .service-card__text a {
+  color: #0C1017;
+  border: 1px solid #0C1017;
+  text-decoration: none;
+  padding: .9rem 2rem;
+  font-size: .9rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.service-card .service-card__text a:hover {
+  background-color: #0C1017;
+  color: #fefefe;
+}
+
+.service-card .service-card__text .inner {
+  max-width: 560px;
+  margin: 0 auto;
+}
+
+@media (min-width: 1024px) {
+  .service-card .service-card__text .inner {
+    max-width: 400px;
+  }
+}
+
+.order-1 {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.order-2 {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
 .isOpen {
