--- a/style/core/_global.scss
+++ b/style/core/_global.scss
@@ -57,6 +57,7 @@ img{
     @include bgImageStyle();
     @include flex(center);
     min-height: 50vh;
+    padding: 10rem 5vw 7.5rem 5vw;
     @include breakpoint(1024px){
         padding: 12.5rem 5vw 12.5rem 5vw;
     }
