--- a/style/main.scss
+++ b/style/main.scss
@@ -7,6 +7,7 @@
 
 @import "./components/buttons";
 @import "./components/spinner";
+@import "./components/forms";
 
 @import "./layout/navigation";
 @import "./layout/intro";
@@ -16,5 +17,6 @@
 
 @import "./pages/home";
 @import "./pages/services";
+@import "./pages/contact";
 
 @import "./core/animation";
