contact form validation

--- a/style/core/_animation.scss
+++ b/style/core/_animation.scss
@@ -12,7 +12,12 @@
 }
 
 .show{
-    display: block;
+    display: block !important;
+}
+
+.hide{
+    opacity: 0;
+    visibility: hidden;
 }
 
 .preload *{
