--- a/style/components/_forms.scss
+++ b/style/components/_forms.scss
@@ -6,15 +6,17 @@
     @include breakpoint(1100px){
         max-width: 58%;
     }
-    input{
+    input,
+    select{
         border: 1px solid rgba(158,159,162,0.4);
-        padding: 0 1rem;
+        padding: 0 1.5rem;
         height: 2.5rem;
         width: 100%;
         &:focus{
             outline: none;
         }
     }
+    
     .field{
         padding-top: 1.5rem;
         width: 100%;
@@ -27,6 +29,7 @@
         padding-top: 1.5rem;
     }
     label{
+        position: relative;
         p{
             text-transform: uppercase;
             font-weight: 700;
@@ -35,6 +38,11 @@
             letter-spacing: 0.1rem;
             margin-bottom: 0.3rem;
         }
+    }
+    .error-required{
+        position: absolute;
+        color: $red;
+        font-size: .8rem;
     }
     textarea{
         max-width: 100%;
