--- a/style/main.css
+++ b/style/main.css
@@ -300,14 +300,16 @@ button {
   }
 }
 
-.contact-form input {
+.contact-form input,
+.contact-form select {
   border: 1px solid rgba(158, 159, 162, 0.4);
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   height: 2.5rem;
   width: 100%;
 }
 
-.contact-form input:focus {
+.contact-form input:focus,
+.contact-form select:focus {
   outline: none;
 }
 
@@ -326,6 +328,10 @@ button {
   padding-top: 1.5rem;
 }
 
+.contact-form label {
+  position: relative;
+}
+
 .contact-form label p {
   text-transform: uppercase;
   font-weight: 700;
@@ -333,6 +339,12 @@ button {
   font-size: 0.9rem;
   letter-spacing: 0.1rem;
   margin-bottom: 0.3rem;
+}
+
+.contact-form .error-required {
+  position: absolute;
+  color: #AB2B30;
+  font-size: .8rem;
 }
 
 .contact-form textarea {
@@ -1523,6 +1535,7 @@ button {
 }
 
 .contact-bg {
+  position: relative;
   background-color: #F5F5F6;
   padding: 5rem 0;
 }
@@ -1547,6 +1560,15 @@ button {
   }
 }
 
+.form-success {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: none;
+}
+
 .isOpen {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -1563,7 +1585,12 @@ button {
 }
 
 .show {
-  display: block;
+  display: block !important;
+}
+
+.hide {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .preload * {
